MJ tool, minorité et modificateur espionage

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -279,7 +279,6 @@
  glp_save_edit_events.EVTBUFFA32:0 "-1 Imperial Authority"
  glp_save_edit_events.EVTBUFFA33:0 "-10 Imperial Authority"
  glp_save_edit_events.EVTBUFFA34:0 "-100 Imperial Authority"
- glp_save_edit_events.EVTBUFFA35:0 "10 Devastation"
  
  glp_save_edit_events.EVTNAME17:0 "Spawn Generals for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC17:0 "Decide what kind of generals to spawn for [From.Owner.GetName]."
@@ -327,6 +326,9 @@
  glp_save_edit_events.EVTPANTHEONA12:0 "Aza le marchand de sable Stability tier 5"
  glp_save_edit_events.EVTPANTHEONA13:0 "Panzeweeb Interspecies Reviewer tarrifs tier 5"
  glp_save_edit_events.EVTPANTHEONA14:0 "The Dev Brothers"
+ glp_save_edit_events.EVTPANTHEONA15:0 "Tarkain le traducteur fou Production eff tier 5"
+ glp_save_edit_events.EVTPANTHEONA16:0 "Rafy Paratranz-man inflation tier 5"
+
  glp_save_edit_events.EVTNAME22:0 "Received new advisor"
  glp_save_edit_events.EVTDESC22:0 "My [Root.Monarch.GetTitle]! The advisor we were promised by the official sent from the Infernal Troll Game Masters has arrived in our [Root.GovernmentName]. Our nation will now eclipse all others in their glory!"
  glp_save_edit_events.EVTOPTA22:0 "Splendid!"
@@ -431,6 +433,8 @@
  glp_save_edit_events.EVTNAME28:0 "Modifier Rewards for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC28:0 "What kind of modifier do you want for [From.Owner.GetName]?"
  glp_save_edit_events.EVTCAPACTIVEZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTCAPACTIVEA00:0 "Fabricate claim easier"
+ glp_fabricate_claim:0 "Fabricate claim bonus"
  glp_save_edit_events.EVTCAPACTIVEA01:0 "Idea industrial activation"
  glp_idea_industrial_completed:0 "Idea industrial bonus"
  glp_save_edit_events.EVTCAPACTIVEA02:0 "Idea innovation activation"
