--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -327,6 +327,9 @@
  glp_save_edit_events.EVTPANTHEONA12:0 "Aza le marchand de sable (Stabilité, niveau 5)"
  glp_save_edit_events.EVTPANTHEONA13:0 "Panzeweeb Interspecies Reviewer (Tarifs, niveau 5)"
  glp_save_edit_events.EVTPANTHEONA14:0 "Les Frères Dev"
+ glp_save_edit_events.EVTPANTHEONA15:0 "Tarkain le traducteur fou (Efficacité de production, niveau 5)"
+ glp_save_edit_events.EVTPANTHEONA16:0 "Rafy Paratranz-man (Inflation, niveau 5)"
+
  glp_save_edit_events.EVTNAME22:0 "Un nouveau conseiller est arrivé"
  glp_save_edit_events.EVTDESC22:0 "[Root.Monarch.GetTitle] ! Le conseiller qui nous avait été promis par l'envoyé officiel des Maîtres du Jeu Trolls Infernal est arrivé dans notre [Root.GovernmentName]. Notre nation éclipsera désormais toutes les autres par sa gloire !"
  glp_save_edit_events.EVTOPTA22:0 "Magnifique !"
@@ -431,6 +434,8 @@
  glp_save_edit_events.EVTNAME28:0 "Modificateurs de récompenses pour [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC28:0 "Quel type de modificateur souhaitez-vous pour [From.Owner.GetName] ?"
  glp_save_edit_events.EVTCAPACTIVEZZ1:0 "Non, peu importe"
+ glp_save_edit_events.EVTCAPACTIVEA00:0 "Fabrication des revendications rapide"
+ glp_fabricate_claim:0 "Fabrication des revendications rapide"
  glp_save_edit_events.EVTCAPACTIVEA01:0 "Activation de l'idée industrielle"
  glp_idea_industrial_completed:0 "Bonus de l'idée industrielle"
  glp_save_edit_events.EVTCAPACTIVEA02:0 "Activation de l'idée d'innovation"
