great project casino

--- a/3362815204/localisation/piem_monuments_l_french.yml
+++ b/3362815204/localisation/piem_monuments_l_french.yml
@@ -15,3 +15,44 @@ dovemarket_bazaar_title: "Le Bazar du Dovemarket"
 dovemarket_bazaar: "Le Bazar du Dovemarket"
 great_project_dovemarket_bazaar: "Le Bazar du Dovemarket"
 dovemarket_bazaar_desc: "Le Bazar du Dovemarket d Anbenncóst est un vaste labyrinthe de marchands, d odeurs et de couleurs où se réunissent les commerçants venus de tout Cannor et d au-delà. Des soieries fines aux reliques rares d Aelantir, ce marché est la véritable source de richesse et de cosmopolitisme de la cité."
+
+
+bells_of_reverence_title: "Cloches de la Révérence"
+bells_of_reverence: "Cloches de la Révérence"
+great_project_bells_of_reverence: "Cloches de la Révérence"
+bells_of_reverence_desc: "Les Cloches de la Révérence de Tellum résonnent à travers les vallées de la Damerie, et l’on dit que leurs sons bénissent les fidèles tout en chassant les mauvais présages. Forgées par des forgerons divins et accordées par le chant des prêtres, leurs carillons marquent les couronnements, les funérailles et les grands présages à travers tout Cannor."
+
+ashenfield_casino_title: "Grand Casino d’Ashenfield"
+ashenfield_casino: "Grand Casino d’Ashenfield"
+great_project_ashenfield_casino: "Grand Casino d’Ashenfield"
+ashenfield_casino_desc: "Monument à la fois de la fortune et de la folie, le Grand Casino d’Ashenfield attire nobles, marchands et aventuriers désireux de tenter leur chance. L’or y coule comme le vin, et de nombreuses fortunes s’y élèvent ou s’y brisent sous l’éclat de ses lustres étincelants, inspiré de la maison de jeu de Ravenhill."
+
+salt_mine_of_the_empire_title: "Mine de sel de l’Empire"
+salt_mine_of_the_empire: "Mine de sel de l’Empire"
+great_project_salt_mine_of_the_empire: "Mine de sel de l’Empire"
+salt_mine_of_the_empire_desc: "On raconte que toutes les larmes des dieux infernaux furent bues ici, donnant naissance à une mine de sel éternelle dont les profondeurs semblent ne jamais s’épuiser."
+
+castle_of_the_second_sons_title: "Château des Seconds Fils"
+castle_of_the_second_sons: "Château des Seconds Fils"
+great_project_castle_of_the_second_sons: "Château des Seconds Fils"
+castle_of_the_second_sons_desc: "Demeure de la légendaire confrérie des Seconds Fils de l’Empire, cette forteresse sert à la fois de caserne et de bastion pour ceux qui combattent pour l’honneur, la fraternité et la solde. Ses couloirs résonnent encore des chants des campagnes victorieuses et des camarades tombés à travers tout Cannor."
+
+magical_wind_mill_title: "Moulin Magique"
+magical_wind_mill: "Moulin Magique"
+great_project_magical_wind_mill: "Moulin Magique"
+magical_wind_mill_desc: "Dominant les plaines ondoyantes de Windtower, ce moulin enchanté canalise à la fois le vent et la mana pour moudre le grain, tisser les étoffes et alimenter d’ingénieuses machines. Son ronronnement régulier se fait entendre à des lieues à la ronde, symbole de l’ingéniosité damerienne et de la maîtrise arcanique de ses artisans."
+
+imperial_vineyard_title: "Vignoble Impérial"
+imperial_vineyard: "Vignoble Impérial"
+great_project_imperial_vineyard: "Vignoble Impérial"
+imperial_vineyard_desc: "Nichés parmi les collines fertiles de Wineport, les Vignobles Impériaux produisent des crus prisés dans les cours des rois comme des empereurs. Chaque récolte y est bénie lors de cérémonies somptueuses, et chaque bouteille porte en elle l’héritage du noble terroir damerien."
+
+grand_cellars_of_sornbey_title: "Grandes Caves de Sornbey"
+grand_cellars_of_sornbey: "Grandes Caves de Sornbey"
+great_project_grand_cellars_of_sornbey: "Grandes Caves de Sornbey"
+grand_cellars_of_sornbey_desc: "Sous les collines douces de Sornbey s’étendent les Grandes Caves, un labyrinthe sans fin de fûts de chêne et de voûtes de pierre où les meilleurs vins de Dameria mûrissent à la perfection. L’air y est frais, sucré, et chargé de siècles de savoir-faire et de festivités."
+
+munas_pearl_lighthouse_title: "Phare de la Perle de Munas"
+munas_pearl_lighthouse: "Phare de la Perle de Munas"
+great_project_munas_pearl_lighthouse: "Phare de la Perle de Munas"
+munas_pearl_lighthouse_desc: "Couronné par la Perle sacrée de Munas, ce phare resplendissant concentre la lumière divine en un rayon aveuglant capable d’embraser les flottes ennemies. Révéré à la fois comme arme et comme relique sacrée, il guide les fidèles à travers les tempêtes et foudroie les hérétiques qui défient la volonté de la mer."
