--- a/3362815204/localisation/piem_monuments_l_english.yml
+++ b/3362815204/localisation/piem_monuments_l_english.yml
@@ -14,7 +14,7 @@ order_of_chroniclers_headquarters_desc: "Located in Anbenncóst s Temple Distric
 dovemarket_bazaar_title: "Dovemarket Bazaar"
 dovemarket_bazaar: "Dovemarket Bazaar"
 great_project_dovemarket_bazaar: "Dovemarket Bazaar"
-dovemarket_bazaar_desc: "The Dovemarket Bazaar of Anbenncóst is a sprawling labyrinth of merchants, scents, and colors where traders from across Cannor and beyond gather. From fine silks to rare Aelantiri relics, the bazaar is the true lifeblood of the city’s wealth and cosmopolitan spirit."
+dovemarket_bazaar_desc: "The Dovemarket Bazaar of Anbenncóst is a sprawling labyrinth of merchants, scents, and colors where traders from across Cannor and beyond gather. From fine silks to rare Aelantiri relics, the bazaar is the true lifeblood of the city's wealth and cosmopolitan spirit."
 
 bells_of_reverence_title: "Bells of Reverence"
 bells_of_reverence: "Bells of Reverence"
@@ -30,3 +30,28 @@ salt_mine_of_the_empire_title: "Salt mine of the empire"
 salt_mine_of_the_empire: "Salt mine of the empire"
 great_project_salt_mine_of_the_empire: "Salt mine of the empire"
 salt_mine_of_the_empire_desc: "It is said that all the tears of the infernal gods were drunk here, giving birth to an eternal salt mine"
+
+castle_of_the_second_sons_title: "Castle of the Second Sons"
+castle_of_the_second_sons: "Castle of the Second Sons"
+great_project_castle_of_the_second_sons: "Castle of the Second Sons"
+castle_of_the_second_sons_desc: "Home to the storied the Second Sons of the Empire, this fortress stands as both barracks and bastion for those who fight for honor, coin, and brotherhood. Its halls echo with songs of campaigns won and comrades lost across all of Cannor."
+
+magical_wind_mill_title: "Magical Windmill"
+magical_wind_mill: "Magical Windmill"
+great_project_magical_wind_mill: "Magical Windmill"
+magical_wind_mill_desc: "Towering over Windtower's rolling plains, this enchanted mill harnesses both wind and mana to grind grain, weave cloth, and power intricate machines. Its rhythmic hum can be heard miles away, a symbol of Dameria's ingenuity and the arcane mastery of its craftsmen."
+
+imperial_vineyard_title: "Imperial Vineyard"
+imperial_vineyard: "Imperial Vineyard"
+great_project_imperial_vineyard: "Imperial Vineyard"
+imperial_vineyard_desc: "Nestled among the fertile hills of Wineport, the Imperial Vineyard produces vintages prized in the courts of kings and emperors alike. Each harvest is blessed in elaborate ceremonies, and every bottle carries with it the legacy of Dameria's noble soil."
+
+grand_cellars_of_sornbey_title: "Grand Cellars of Sornbey"
+grand_cellars_of_sornbey: "Grand Cellars of Sornbey"
+great_project_grand_cellars_of_sornbey: "Grand Cellars of Sornbey"
+grand_cellars_of_sornbey_desc: "Beneath the soft hills of Sornbey stretch the Grand Cellars, an endless labyrinth of oak casks and stone vaults where the finest wines of Dameria age to perfection. The air here is cool, sweet, and heavy with centuries of craftsmanship and revelry."
+
+munas_pearl_lighthouse_title: "Pearl of Munas Lighthouse"
+munas_pearl_lighthouse: "Pearl of Munas Lighthouse"
+great_project_munas_pearl_lighthouse: "Pearl of Munas Lighthouse"
+munas_pearl_lighthouse_desc: "Crowned by the sacred Pearl of Munas, this radiant lighthouse focuses divine light into a blinding beam capable of setting enemy ships ablaze. Revered as both weapon and holy relic, it guides the faithful through storms and strikes down the heretics who defy the sea's will."
