Changement du menu MJ sur les minorités

--- a/3362815204/localisation/GLP_gui_l_english.yml
+++ b/3362815204/localisation/GLP_gui_l_english.yml
@@ -9,16 +9,16 @@ glp_save_edits_menu_header:0 "Save Edits Menu"
 glp_toast_loc: "§YAnnouncements§!" #Need to change the contents of the messages
 
 #Province modifiers
-glp_province_buildup_loc: "§PModify buildings§!" #Need to add the option to remove buildings
-glp_change_trade_good_loc: "§PChange Province Goods§!" #Done 97 trade goods
+glp_province_buildup_loc: "§YModify buildings§!" #Need to add the option to remove buildings
+glp_change_trade_good_loc: "§YChange Province Goods§!" #Done 97 trade goods
 glp_change_province_religion_loc: "Change Province Religion" #Done need all religions and religions filtered by groups
 glp_change_religion_loc: "Change Country Religion" #Done need all religions and religions filtered by groups
-glp_change_government_loc: "§PAdd minorities§!" #Broken, need verification, To be renamed as Add/Remove Minorities
+glp_change_government_loc: "§YAdd minorities§!" #Broken, need verification, To be renamed as Add/Remove Minorities
 
 #Country modifiers
 glp_give_mana_loc: "§GAdd Mana§! £dip£ £adm£ £mil£" #Done maybe regroup and add more options
 glp_donate_ducats_loc: "§GAdd Treasury§!" #Done maybe add more options
-glp_ai_fixes_loc: "§RBig Red Admin Button§!" #Done
+glp_ai_fixes_loc: "§RDebuffs§!" #Done
 glp_general_rewards_loc: "§GMiscellaneous Boost§!" #Done
 glp_award_artifact_loc: "§GAward/Steal Artifact§!" #To be renamed as Attribute flag
 glp_rewards_modifier_loc: "§GRewards Ideas groups§!" #To be renamed as Rewards Ideas groups
@@ -27,19 +27,19 @@ glp_spawn_advisor_loc: "§OSpawn Advisor§! £dip£ £adm£ £mil£" #Done Keeps
 glp_add_estate_loyalty_loc: "§OImprove Estate Loyalty§!" #Done need more estates
 
 #Military modifiers
-glp_spawn_troops_loc: "§BSpawn Troops§!" #Done maybe add specials troops
+glp_spawn_troops_loc: "§RSpawn Troops§!" #Done maybe add specials troops
 glp_spawn_ships_loc: "§BSpawn Ships§!" #Done maybe add specials ships
-glp_military_rewards_loc: "§BMilitary Boost§!" #Done
+glp_military_rewards_loc: "§RMilitary Boost§!" #Done
 glp_naval_rewards_loc: "§BNaval Boost§!" #Done
-glp_spawn_general_loc: "§BSpawn General/Warwizard§!" #Done
-glp_spawn_admiral_loc: "§BSpawn Admiral§!" #Done
+glp_spawn_general_loc: "§CSpawn General/Warwizard§!" #Done
+glp_spawn_admiral_loc: "§CSpawn Admiral§!" #Done
 
 #Dangerous modifiers
-glp_release_province_loc: "§YRelease Province§!" #Nothing to change
-glp_release_all_possible_provs_loc: "§YRelease All Possible Provinces§!" #Nothing to change
+glp_release_province_loc: "§PRelease Province§!" #Nothing to change
+glp_release_all_possible_provs_loc: "§PRelease All Possible Provinces§!" #Nothing to change
 
 #Enable disable factions for events
-glp_enable_disable_factions_loc: "Enable/Disable Factions" #Nothing to change
+glp_enable_disable_factions_loc: "§REnable/Disable Factions§!" #Nothing to change
 
 #New buttons
 glp_change_dev_in_province_loc: "§GModification of dev§!" 
