--- a/3362815204/localisation/GLP_gui_l_french.yml
+++ b/3362815204/localisation/GLP_gui_l_french.yml
@@ -9,37 +9,37 @@ glp_save_edits_menu_header:0 "Menu d'Édition de Sauvegarde"
 glp_toast_loc: "§YAnnonces§!" #Il faut changer le contenu des messages
 
 #Modificateurs de province
-glp_province_buildup_loc: "§PModifier les bâtiments§!" #Il faut ajouter l'option pour supprimer des bâtiments
-glp_change_trade_good_loc: "§PChanger les Biens de la Province§!" #Terminé, 97 biens commerciaux
+glp_province_buildup_loc: "§YModifier les bâtiments§!" #Il faut ajouter l'option pour supprimer des bâtiments
+glp_change_trade_good_loc: "§YChanger les Biens de la Province§!" #Terminé, 97 biens commerciaux
 glp_change_province_religion_loc: "Changer la Religion de la Province" #Terminé, besoin de toutes les religions et des religions filtrées par groupes
 glp_change_religion_loc: "Changer la Religion du Pays" #Terminé, besoin de toutes les religions et des religions filtrées par groupes
-glp_change_government_loc: "§PAjouter des minorités§!" #Cassé, besoin de vérification, À renommer en Ajouter/Retirer des Minorités
+glp_change_government_loc: "§YAjouter des minorités§!" #Cassé, besoin de vérification, À renommer en Ajouter/Retirer des Minorités
 
 #Modificateurs de pays
 glp_give_mana_loc: "§GAjouter de la Mana§! £dip£ £adm£ £mil£" #Terminé, peut-être regrouper et ajouter plus d'options
 glp_donate_ducats_loc: "§GAjouter au Trésor§!" #Terminé, peut-être ajouter plus d'options
-glp_ai_fixes_loc: "§GBouton Administratif Rouge§!" #Terminé
+glp_ai_fixes_loc: "§RDebuffs§!" #Terminé
 glp_general_rewards_loc: "§GDivers Bonus§!" #Terminé
 glp_award_artifact_loc: "§GAttribuer/Voler un Artefact§!" #À renommer en Attribuer un drapeau
 glp_rewards_modifier_loc: "§GRécompenses des Groupes d'Idées§!" #À renommer en Récompenses des Groupes d'Idées
-glp_change_ruler_loc: "§OModification du Dirigeant§! £dip£ £adm£ £mil£" #Terminé, peut-être regrouper plus d'actions dans différents événements
-glp_spawn_advisor_loc: "§OFaire apparaître un Conseiller§! £dip£ £adm£ £mil£" #Terminé, continue d'ajouter de nouveaux conseillers liés aux contributeurs du projet
+glp_change_ruler_loc: "§OModif du Dirigeant§! £dip£ £adm£ £mil£" #Terminé, peut-être regrouper plus d'actions dans différents événements
+glp_spawn_advisor_loc: "§OMenu Conseiller§! £dip£ £adm£ £mil£" #Terminé, continue d'ajouter de nouveaux conseillers liés aux contributeurs du projet
 glp_add_estate_loyalty_loc: "§OAméliorer la Loyauté des États§!" #Terminé, besoin de plus d'États
 
 #Modificateurs militaires
-glp_spawn_troops_loc: "§FFaire apparaître des Troupes§!" #Terminé, peut-être ajouter des troupes spéciales
-glp_spawn_ships_loc: "§FFaire apparaître des Navires§!" #Terminé, peut-être ajouter des navires spéciaux
-glp_military_rewards_loc: "§FBonus Militaire§!" #Terminé
-glp_naval_rewards_loc: "§FBonus Naval§!" #Terminé
-glp_spawn_general_loc: "§FFaire apparaître un Général/Guerrier-Mage§!" #Terminé
-glp_spawn_admiral_loc: "§FFaire apparaître un Amiral§!" #Terminé
+glp_spawn_troops_loc: "§RFaire apparaître des Troupes§!" #Terminé, peut-être ajouter des troupes spéciales
+glp_spawn_ships_loc: "§BFaire apparaître des Navires§!" #Terminé, peut-être ajouter des navires spéciaux
+glp_military_rewards_loc: "§RBonus Militaire§!" #Terminé
+glp_naval_rewards_loc: "§BBonus Naval§!" #Terminé
+glp_spawn_general_loc: "§CFaire apparaître un Général/Guerrier-Mage§!" #Terminé
+glp_spawn_admiral_loc: "§CFaire apparaître un Amiral§!" #Terminé
 
 #Modificateurs dangereux
-glp_release_province_loc: "§YLibérer une Province§!" #Rien à changer
-glp_release_all_possible_provs_loc: "§YLibérer Toutes les Provinces Possibles§!" #Rien à changer
+glp_release_province_loc: "§PLibérer une Province§!" #Rien à changer
+glp_release_all_possible_provs_loc: "§PLibérer Toutes les Provinces Possibles§!" #Rien à changer
 
 #Activer/désactiver les factions pour les événements
-glp_enable_disable_factions_loc: "Activer/Désactiver les Factions" #Rien à changer
+glp_enable_disable_factions_loc: "§RActiver/Désactiver les Factions§!" #Rien à changer
 
 #Nouveaux boutons
 glp_change_dev_in_province_loc: "§GModification du développement§!"
