Maj monument Saharal + monument cannor

--- a/3362815204/localisation/lizardGP_monuments_effects_l_english.yml
+++ b/3362815204/localisation/lizardGP_monuments_effects_l_english.yml
@@ -81,3 +81,10 @@ karrsk_marin_two: "Veterans of the Mosaic Sea"
 karrsk_marin_two_desc: "At the second level, Karassian Marines become even more seasoned, their endurance and combat skills further honed through brutal encounters. They now receive less damage from both shock and fire attacks, and their shock damage in battle is significantly increased. Their morale is more resilient, allowing them to hold positions and strike quickly against opponents."
 karrsk_marin_three: "Sea Devils"
 karrsk_marin_three_desc: "At the third level, Karassian Marines become living legends, true "Sea Devils," whose combat prowess is unmatched. These elite soldiers take almost no damage from shock or fire attacks, and their morale remains unwavering in the fiercest of battles. Their ability to inflict shock damage reaches unprecedented heights, and enemies fear facing them in combat, knowing they cannot withstand such relentless force."
+
+destr_mint_title: "Desecrate the Mint of Golcora"
+destr_mint_desc: "The ancient Mint of Golcora, once a sacred site of trade and divine wealth, still stands—untouched, unbroken, unclaimed by our kind. It is a symbol of human arrogance and order. Let us tear down their golden legacy and remake it in our image: a fortress of chains, flames, and endless gold, wrung from the backs of slaves."
+destr_mint_tooltip: "Replace the ancient Golcora Mint with a Gnollish gold mine complex."
+revv_mint_title: "Restore the Mint of Golcora"
+revv_mint_desc: "The fires of Golcora no longer burn for cruelty—they burn with purpose once more. The monstrous legacy of gnollish greed can be undone. Let the halls of the mint echo again with the sound of coin striking coin, not the cries of the chained. We will restore this place to what it once was: a testament to order, commerce, and divine craftsmanship."
+revv_mint_tooltip: "Rebuild the ancient Mint of Golcora, restoring its original grandeur."
