--- a/3362815204/localisation/lizardGP_monuments_effects_l_french.yml
+++ b/3362815204/localisation/lizardGP_monuments_effects_l_french.yml
@@ -81,3 +81,11 @@ karrsk_marin_two: "Vétérans de la Mer Mosaïque"
 karrsk_marin_two_desc: "Au deuxième niveau, les Marines karassiennes deviennent encore plus aguerris, leur endurance et compétences martiales affinées par d'impitoyables rencontres avec la mort. Ils subissent désormais moins de dégâts aussi bien des attaques de choc que de feu, et leurs dégâts de choc au combat s'accroissent significativement. Leur moral résiste mieux aux épreuves, leur permettant de tenir les positions stratégiques et frapper rapidement contre les adversaires les plus coriaces."
 karrsk_marin_three: "Diables des Mers"
 karrsk_marin_three_desc: "Au troisième niveau, les Marines karassiennes deviennent des légendes vivantes, de véritables « Diables des Mers », dont la prouesse au combat demeure inégalée à travers tous les océans. Ces soldats d'élite subissent pratiquement aucun dégât des attaques de choc ou de feu, et leur moral reste inébranlable dans les batailles les plus acharnées. Leur capacité à infliger des dégâts de choc atteint des sommets inédits, et les ennemis redoutent de les affronter au combat, sachant qu'ils ne peuvent résister à une force si implacable et dévastatrice."
+
+destr_mint_title: "Profaner la Monnaie de Golcora"
+destr_mint_desc: "L'ancienne Monnaie de Golcora, jadis lieu sacré du commerce et de la richesse divine, se dresse encore — intacte, inviolée, jamais réclamée par les nôtres. Elle demeure un symbole de l'arrogance et de l'ordre humains. Détruisons leur héritage doré et refaçonnons-le à notre image : une forteresse de chaînes, de flammes et d'or sans fin, arraché au dos des esclaves."
+destr_mint_tooltip: "Remplace l'ancienne Monnaie de Golcora par un complexe minier gnollique."
+
+revv_mint_title: "Restaurer la Monnaie de Golcora"
+revv_mint_desc: "Les flammes de Golcora ne brûlent plus pour la cruauté — elles brûlent à nouveau pour un dessein. L'héritage monstrueux de la cupidité gnollique peut être effacé. Que les salles de la monnaie résonnent à nouveau du son de la pièce frappant la pièce, et non des cris des enchaînés. Nous rendrons à ce lieu sa véritable nature : un témoignage d'ordre, de commerce et d'artisanat divin."
+revv_mint_tooltip: "Reconstruit l'ancienne Monnaie de Golcora, restaurant sa splendeur originelle."
