--- a/3362815204/localisation/piem_monuments_l_english.yml
+++ b/3362815204/localisation/piem_monuments_l_english.yml
@@ -34,7 +34,7 @@ salt_mine_of_the_empire_desc: "It is said that all the tears of the infernal god
 castle_of_the_second_sons_title: "Castle of the Second Sons"
 castle_of_the_second_sons: "Castle of the Second Sons"
 great_project_castle_of_the_second_sons: "Castle of the Second Sons"
-castle_of_the_second_sons_desc: "Home to the storied the Second Sons of the Empire, this fortress stands as both barracks and bastion for those who fight for honor, coin, and brotherhood. Its halls echo with songs of campaigns won and comrades lost across all of Cannor."
+castle_of_the_second_sons_desc: "Home to the storied the Second Sons of the Empire, this fortress stands as both barracks and bastion for those who fight for honor and brotherhood. Its halls echo with songs of campaigns won and comrades lost across all of Cannor."
 
 magical_wind_mill_title: "Magical Windmill"
 magical_wind_mill: "Magical Windmill"
@@ -46,10 +46,10 @@ imperial_vineyard: "Imperial Vineyard"
 great_project_imperial_vineyard: "Imperial Vineyard"
 imperial_vineyard_desc: "Nestled among the fertile hills of Wineport, the Imperial Vineyard produces vintages prized in the courts of kings and emperors alike. Each harvest is blessed in elaborate ceremonies, and every bottle carries with it the legacy of Dameria's noble soil."
 
-grand_cellars_of_sornbey_title: "Grand Cellars of Sornbey"
-grand_cellars_of_sornbey: "Grand Cellars of Sornbey"
-great_project_grand_cellars_of_sornbey: "Grand Cellars of Sornbey"
-grand_cellars_of_sornbey_desc: "Beneath the soft hills of Sornbey stretch the Grand Cellars, an endless labyrinth of oak casks and stone vaults where the finest wines of Dameria age to perfection. The air here is cool, sweet, and heavy with centuries of craftsmanship and revelry."
+grand_cellars_of_sornbay_title: "Grand Cellars of Sornbay"
+grand_cellars_of_sornbay: "Grand Cellars of Sornbay"
+great_project_grand_cellars_of_sornbay: "Grand Cellars of Sornbay"
+grand_cellars_of_sornbay_desc: "Beneath the soft hills of Sornbay stretch the Grand Cellars, an endless labyrinth of oak casks and stone vaults where the finest wines of the Winebay age to perfection. The air here is cool, sweet, and heavy with centuries of craftsmanship and revelry."
 
 munas_pearl_lighthouse_title: "Pearl of Munas Lighthouse"
 munas_pearl_lighthouse: "Pearl of Munas Lighthouse"
