Patch buildings, prod, ACE, nationalism
Nationnalism event fix no mana nor dev, more tax on buildings, less production modif until manufactories instit, ace add provicail group, patch bal hyl and estate icons

--- a/3362815204/localisation/1me_text_l_french.yml
+++ b/3362815204/localisation/1me_text_l_french.yml
@@ -65,6 +65,7 @@ scry_on_everyone_tooltip:0 "Lever le brouillard de guerre pendant 120 mois"
 advisor_flags_info_title:0 "Statut des Événements de Conseillers"
 advisor_flags_info_desc:0 "Cette option affiche quels événements de conseillers ont été déclenchés dans votre pays."
 
+less_prod:0 "moins de production jusqu'à l'institution des manufactures"
 tm_admtech_02:0 "Bonus admin tech 2"
 tm_admtech_03:0 "Bonus admin tech 3"
 tm_admtech_04:0 "Bonus admin tech 4"
