--- a/3362815204/localisation/1me_text_l_english.yml
+++ b/3362815204/localisation/1me_text_l_english.yml
@@ -65,7 +65,7 @@ scry_on_everyone_tooltip:0 "Lift Fog of war during 120 months"
 advisor_flags_info_title:0 "Advisor Events Status"
 advisor_flags_info_desc:0 "This option displays which advisor events have been triggered in your country."
 
-
+less_prod:0 "less production until manufactories institution"
 tm_admtech_02:0 "Bonus admin tech 2"
 tm_admtech_03:0 "Bonus admin tech 3"
 tm_admtech_04:0 "Bonus admin tech 4"
