Commit update fix
Ajout bouton MJ Event magic (à tester). Update escandar pour correspondre à l'arbre de mission de Sugamber. Fix idea staatsverwaltung0 (state administration) pour random dev upon centralisation. Fix Minorities relation MJ (à tester). Fix event localization event minotaurs. Ajout de localisation pour magic experience 1000/1500/2000/-100/-200. Fix arbre de mission sugamber pour A48_unravel_nirat_archives.

--- a/3362815204/localisation/ACE_Flavour_aw_minotaurs_l_english.yml
+++ b/3362815204/localisation/ACE_Flavour_aw_minotaurs_l_english.yml
@@ -9,7 +9,7 @@ desc_aw_minotaurs_3: "A hierarchy structure has appeared among the Minotaurs of 
 
 aw_minotaurs_migrate_to_other_country_tt: "The Minotaurs migrate to a neighbouring country."
 
-aw_minotaurs_0.t: "Minotaur Herd Appears"
+aw_minotaurs.0.t: "Minotaur Herd Appears"
 
 aw_minotaurs.20.t: "Minotaurs Exterminated!"
 aw_minotaurs.20.d: "£icon_adventurers_wanted_banner£\nAdventuring parties have managed to clear out most, if not all Minotaurs from [Root.GetName]."
