--- a/3362815204/localisation/ACE_Flavour_aw_minotaurs_l_french.yml
+++ b/3362815204/localisation/ACE_Flavour_aw_minotaurs_l_french.yml
@@ -10,7 +10,13 @@ desc_aw_minotaurs_3: "Une structure hiérarchique est apparue parmi les Minotaur
 
 aw_minotaurs_migrate_to_other_country_tt: "Les Minotaures migrent vers un pays voisin."
 
-aw_minotaurs_0.t: "Un troupeau de Minotaures apparaît"
+aw_minotaurs.0.t: "Un troupeau de Minotaures apparaît"
+aw_minotaurs.0.d: "Oh des minotaures! (placeholder) Pour t'en débarrasser, parraine des go dooers."
+aw_basic.0.a: "Préparons nous à nous battre! (placeholder)"
+
+aw_minotaurs.1.t: "Roll aléatoire des Minotaures"
+aw_minotaurs.1.d: "Voyons voir si nous avons de la chance /n §RTu ne devrais pas pouvoir voir ça, c'est un event caché§!"
+
 aw_minotaurs.20.t: "Les Minotaures ont été exterminés !"
 aw_minotaurs.20.d: "£icon_adventurers_wanted_banner£\nDes groupes d'aventuriers ont réussi à éliminer la plupart, sinon tous les Minotaures de [Root.GetName]."
 aw_minotaurs.20.a: "L'ordre est enfin rétabli."
