--- a/3362815204/localisation/GLP_gui_l_english.yml
+++ b/3362815204/localisation/GLP_gui_l_english.yml
@@ -42,10 +42,10 @@ glp_release_all_possible_provs_loc: "§PRelease All Possible Provinces§!" #Noth
 glp_enable_disable_factions_loc: "§REnable/Disable Factions§!" #Nothing to change
 
 #New buttons
-glp_change_dev_in_province_loc: "§GModification of dev§!" 
+glp_change_dev_in_province_loc: "§GModification of dev§!"
+glp_magical_manupulation_loc: "§GMagical Manipulation§!" 
 
 #Empty buttons ready to be changed
-glp_remove_ae_loc: "Remove Country AE" #To be removed
 glp_ignore_tech_formation_loc: "Add/Remove Ignore Tech Formation" #To be removed
 glp_release_pope_loc: "Release Pope" #To be removed
 glp_supress_inquisition_decision_loc: "Supress Inquisition Vote" #To be removed
