--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -458,6 +458,12 @@
  glp_save_edit_events.EVTBUFFA32:0 "-1 Imperial Authority"
  glp_save_edit_events.EVTBUFFA33:0 "-10 Imperial Authority"
  glp_save_edit_events.EVTBUFFA34:0 "-100 Imperial Authority"
+ glp_save_edit_events.EVTBUFFA35:0 "5 Crown land"
+ glp_save_edit_events.EVTBUFFA36:0 "10 Crown land"
+ glp_save_edit_events.EVTBUFFA37:0 "50 Crown land"
+ glp_save_edit_events.EVTBUFFA38:0 "100 Crown land"
+ glp_save_edit_events.EVTBUFFA39:0 "-5 Crown land"
+ glp_save_edit_events.EVTBUFFA40:0 "-10 Crown land"
  
  glp_save_edit_events.EVTNAME17:0 "Spawn Generals for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC17:0 "Decide what kind of generals to spawn for [From.Owner.GetName]."
@@ -790,6 +796,37 @@
  glp_save_edit_events.EVTDESC39:0 "My [Root.Monarch.GetTitle]! The advisor we were promised by the oficcials from The Vampiric Conclave have arrived in our [Root.GovernmentName], our nation will now eclipse all others in their glory!"
  glp_save_edit_events.EVTOPTA39:0 "We need to use this to our advantage!"
  glp_new_npc_advisor_tt:0 "§YNew NPC Advisor joined your cause and is ready to help!§!"
+ 
+ glp_save_edit_events.EVTNAME40: "Magical event for country [From.Owner.GetName]"
+ glp_save_edit_events.EVTDESC40:0 "As a master of all magic, change thier fate for magic."
+ glp_save_edit_events.MAGICALZZ1:0 "Nevermind"
+ glp_save_edit_events.MAGICALA01:0 "100 Experience flat"
+ glp_save_edit_events.MAGICALA02:0 "200 Experience flat"
+ glp_save_edit_events.MAGICALA03:0 "500 Experience flat"
+ glp_save_edit_events.MAGICALA04:0 "1000 Experience flat"
+ glp_save_edit_events.MAGICALA05:0 "1500 Experience flat"
+ glp_save_edit_events.MAGICALA06:0 "2000 Experience flat"
+ glp_save_edit_events.MAGICALA07:0 "§R-100 Experience flat§!"
+ glp_save_edit_events.MAGICALA08:0 "§R-200 Experience flat§!"
+ glp_save_edit_events.MAGICALA09:0 "Make them abandon studied magic"
+ glp_save_edit_events.MAGICALA10:0 "Give them 10 % of study experience"
+ glp_save_edit_events.MAGICALA11:0 "§RGive them -10 % of study experience§!"
+ glp_save_edit_events.MAGICALA12:0 "Level up Abjuration"
+ glp_save_edit_events.MAGICALA13:0 "Level up Divination"
+ glp_save_edit_events.MAGICALA14:0 "Level up Conjuration"
+ glp_save_edit_events.MAGICALA15:0 "Level up Enchantment"
+ glp_save_edit_events.MAGICALA16:0 "Level up Evocation"
+ glp_save_edit_events.MAGICALA17:0 "Level up Illusion"
+ glp_save_edit_events.MAGICALA18:0 "Level up Necromancy"
+ glp_save_edit_events.MAGICALA19:0 "Level up Transmutation"
+ glp_save_edit_events.MAGICALA20:0 "Save all magic schools for the next ruler"
+ glp_save_edit_events.MAGICALA21:0 "Lose all saved magic schools"
+ glp_save_edit_events.MAGICALA22:0 "Give them a small amount of magical infamy"
+ glp_save_edit_events.MAGICALA23:0 "Give them a medium amount of magical infamy"
+ glp_save_edit_events.MAGICALA24:0 "Give them a large amount of magical infamy"
+ glp_save_edit_events.MAGICALA25:0 "Give them a Massive amount of magical infamy"
+ glp_save_edit_events.MAGICALA26:0 "Reset magical infamy"
+  
  glp_save_edit_events.EVTNAME41:0 "Choose an Announcement"
  glp_save_edit_events.EVTDESC41:0 "Choose which announcement to spawn to all players"
  glp_save_edit_events.EVTOPTA41:0 "Nevermind"
