--- a/3362815204/localisation/GLP_l_french.yml
+++ b/3362815204/localisation/GLP_l_french.yml
@@ -456,7 +456,12 @@
  glp_save_edit_events.EVTBUFFA32:0 "-1 d'autorité impériale"
  glp_save_edit_events.EVTBUFFA33:0 "-10 d'autorité impériale"
  glp_save_edit_events.EVTBUFFA34:0 "-100 d'autorité impériale"
- glp_save_edit_events.EVTBUFFA35:0 "10 de dévastation"
+ glp_save_edit_events.EVTBUFFA35:0 "5 Terres de l'état"
+ glp_save_edit_events.EVTBUFFA36:0 "10 Terres de l'état"
+ glp_save_edit_events.EVTBUFFA37:0 "50 Terres de l'état"
+ glp_save_edit_events.EVTBUFFA38:0 "100 Terres de l'état"
+ glp_save_edit_events.EVTBUFFA39:0 "-5 Terres de l'état"
+ glp_save_edit_events.EVTBUFFA40:0 "-10 Terres de l'état"
 
  glp_save_edit_events.EVTNAME17:0 "Faire apparaître des généraux pour [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC17:0 "Décidez quel type de généraux faire apparaître pour [From.Owner.GetName]."
@@ -789,6 +794,37 @@
  glp_save_edit_events.EVTDESC39:0 "[Root.Monarch.GetTitle] ! Le conseiller qui nous avait été promis par les officiels du Conclave Vampirique est arrivé dans notre [Root.GovernmentName]. Notre nation va désormais éclipser toutes les autres par sa gloire !"
  glp_save_edit_events.EVTOPTA39:0 "Nous devons utiliser cela à notre avantage !"
  glp_new_npc_advisor_tt:0 "§YUn nouveau conseiller PNJ a rejoint votre cause et est prêt à aider !§!"
+
+ glp_save_edit_events.EVTNAME40:0 "Événement magique pour le pays [From.Owner.GetName]"
+ glp_save_edit_events.EVTDESC40:0 "En tant que maître de toute la magie, changez leur destin par la magie."
+ glp_save_edit_events.MAGICALZZ1:0 "Laissez tomber"
+ glp_save_edit_events.MAGICALA01:0 "100 points d’expérience fixes"
+ glp_save_edit_events.MAGICALA02:0 "200 points d’expérience fixes"
+ glp_save_edit_events.MAGICALA03:0 "500 points d’expérience fixes"
+ glp_save_edit_events.MAGICALA04:0 "1000 points d’expérience fixes"
+ glp_save_edit_events.MAGICALA05:0 "1500 points d’expérience fixes"
+ glp_save_edit_events.MAGICALA06:0 "2000 points d’expérience fixes"
+ glp_save_edit_events.MAGICALA07:0 "§R-100 points d’expérience fixes§!"
+ glp_save_edit_events.MAGICALA08:0 "§R-200 points d’expérience fixes§!"
+ glp_save_edit_events.MAGICALA09:0 "Les forcer à abandonner la magie étudiée"
+ glp_save_edit_events.MAGICALA10:0 "Leur donner 10 % d’expérience d’étude"
+ glp_save_edit_events.MAGICALA11:0 "§RLeur donner -10 % d’expérience d’étude§!"
+ glp_save_edit_events.MAGICALA12:0 "Augmenter le niveau en Abjuration"
+ glp_save_edit_events.MAGICALA13:0 "Augmenter le niveau en Divination"
+ glp_save_edit_events.MAGICALA14:0 "Augmenter le niveau en Invocation"
+ glp_save_edit_events.MAGICALA15:0 "Augmenter le niveau en Enchantement"
+ glp_save_edit_events.MAGICALA16:0 "Augmenter le niveau en Évocation"
+ glp_save_edit_events.MAGICALA17:0 "Augmenter le niveau en Illusion"
+ glp_save_edit_events.MAGICALA18:0 "Augmenter le niveau en Nécromancie"
+ glp_save_edit_events.MAGICALA19:0 "Augmenter le niveau en Transmutation"
+ glp_save_edit_events.MAGICALA20:0 "Conserver toutes les écoles de magie pour le prochain dirigeant"
+ glp_save_edit_events.MAGICALA21:0 "Perdre toutes les écoles de magie conservées"
+ glp_save_edit_events.MAGICALA22:0 "Leur donner une petite quantité d'infamie magique"
+ glp_save_edit_events.MAGICALA23:0 "Leur donner une quantité moyenne d'infamie magique"
+ glp_save_edit_events.MAGICALA24:0 "Leur donner une grande quantité d'infamie magique"
+ glp_save_edit_events.MAGICALA25:0 "Leur donner une quantité massive d'infamie magique"
+ glp_save_edit_events.MAGICALA26:0 "Réinitialiser l'infamie magique"
+ 
  glp_save_edit_events.EVTNAME41:0 "Choisir une annonce"
  glp_save_edit_events.EVTDESC41:0 "Choisissez quelle annonce envoyer à tous les joueurs."
  glp_save_edit_events.EVTOPTA41:0 "Non, peu importe"
