--- a/3362815204/localisation/GLP_gui_l_french.yml
+++ b/3362815204/localisation/GLP_gui_l_french.yml
@@ -10,9 +10,9 @@ glp_toast_loc: "§YAnnonces§!" #Il faut changer le contenu des messages
 
 #Modificateurs de province
 glp_province_buildup_loc: "§YModifier les bâtiments§!" #Il faut ajouter l'option pour supprimer des bâtiments
-glp_change_trade_good_loc: "§YChanger les Biens de la Province§!" #Terminé, 97 biens commerciaux
-glp_change_province_religion_loc: "Changer la Religion de la Province" #Terminé, besoin de toutes les religions et des religions filtrées par groupes
-glp_change_religion_loc: "Changer la Religion du Pays" #Terminé, besoin de toutes les religions et des religions filtrées par groupes
+glp_change_trade_good_loc: "§YChanger le Bien Province§!" #Terminé, 97 biens commerciaux
+glp_change_province_religion_loc: "Changer Religion Province" #Terminé, besoin de toutes les religions et des religions filtrées par groupes
+glp_change_religion_loc: "Changer Religion Pays" #Terminé, besoin de toutes les religions et des religions filtrées par groupes
 glp_change_government_loc: "§YAjouter des minorités§!" #Cassé, besoin de vérification, À renommer en Ajouter/Retirer des Minorités
 
 #Modificateurs de pays
@@ -21,31 +21,32 @@ glp_donate_ducats_loc: "§GAjouter au Trésor§!" #Terminé, peut-être ajouter 
 glp_ai_fixes_loc: "§RDebuffs§!" #Terminé
 glp_general_rewards_loc: "§GDivers Bonus§!" #Terminé
 glp_award_artifact_loc: "§GAttribuer/Voler un Artefact§!" #À renommer en Attribuer un drapeau
-glp_rewards_modifier_loc: "§GRécompenses des Groupes d'Idées§!" #À renommer en Récompenses des Groupes d'Idées
+glp_rewards_modifier_loc: "§GRécompenses Groupes d'Idées§!" #À renommer en Récompenses des Groupes d'Idées
 glp_change_ruler_loc: "§OModif du Dirigeant§! £dip£ £adm£ £mil£" #Terminé, peut-être regrouper plus d'actions dans différents événements
 glp_spawn_advisor_loc: "§OMenu Conseiller§! £dip£ £adm£ £mil£" #Terminé, continue d'ajouter de nouveaux conseillers liés aux contributeurs du projet
-glp_add_estate_loyalty_loc: "§OAméliorer la Loyauté des États§!" #Terminé, besoin de plus d'États
+glp_add_estate_loyalty_loc: "§OLoyauté des États§!" #Terminé, besoin de plus d'États
 
 #Modificateurs militaires
-glp_spawn_troops_loc: "§RFaire apparaître des Troupes§!" #Terminé, peut-être ajouter des troupes spéciales
-glp_spawn_ships_loc: "§BFaire apparaître des Navires§!" #Terminé, peut-être ajouter des navires spéciaux
+glp_spawn_troops_loc: "§RTroupes§!" #Terminé, peut-être ajouter des troupes spéciales
+glp_spawn_ships_loc: "§BNavires§!" #Terminé, peut-être ajouter des navires spéciaux
 glp_military_rewards_loc: "§RBonus Militaire§!" #Terminé
 glp_naval_rewards_loc: "§BBonus Naval§!" #Terminé
-glp_spawn_general_loc: "§CFaire apparaître un Général/Guerrier-Mage§!" #Terminé
-glp_spawn_admiral_loc: "§CFaire apparaître un Amiral§!" #Terminé
+glp_spawn_general_loc: "§CGénéral/Guerrier-Mage§!" #Terminé
+glp_spawn_admiral_loc: "§CAmiral§!" #Terminé
 
 #Modificateurs dangereux
 glp_release_province_loc: "§PLibérer une Province§!" #Rien à changer
 glp_release_all_possible_provs_loc: "§PLibérer Toutes les Provinces Possibles§!" #Rien à changer
 
 #Activer/désactiver les factions pour les événements
-glp_enable_disable_factions_loc: "§RActiver/Désactiver les Factions§!" #Rien à changer
+glp_enable_disable_factions_loc: "§RON/OFF Factions§!" #Rien à changer
 
 #Nouveaux boutons
 glp_change_dev_in_province_loc: "§GModification du développement§!"
+glp_magical_manupulation_loc: "§GManipulations Magique§!"
 
 #Boutons vides prêts à être modifiés
-glp_remove_ae_loc: "Retirer l'AE du Pays" #À supprimer
+
 glp_ignore_tech_formation_loc: "Ajouter/Retirer Ignorer la Formation Technologique" #À supprimer
 glp_release_pope_loc: "Libérer le Pape" #À supprimer
 glp_supress_inquisition_decision_loc: "Supprimer le Vote de l'Inquisition" #À supprimer
