--- a/3362815204/localisation/anb_magic_study_l_english.yml
+++ b/3362815204/localisation/anb_magic_study_l_english.yml
@@ -11,6 +11,13 @@
  magic_study_experience_300_tt:0 "Increase §YMagical Study Experience§! by §G300§!."
  magic_study_experience_400_tt:0 "Increase §YMagical Study Experience§! by §G400§!."
  magic_study_experience_500_tt:0 "Increase §YMagical Study Experience§! by §G500§!."
+ #Piemversalis additions
+ magic_study_experience_1000_tt:0 "Increase §YMagical Study Experience§! by §G1000§!."
+ magic_study_experience_1500_tt:0 "Increase §YMagical Study Experience§! by §G1500§!."
+ magic_study_experience_2000_tt:0 "Increase §YMagical Study Experience§! by §G2000§!."
+ magic_study_experience_-100_tt:0 "Decrease §YMagical Study Experience§! by §R100§!."
+ magic_study_experience_-200_tt:0 "Decrease §YMagical Study Experience§! by §R200§!."
+ ###
  magic_study_experience_modifier_tt:0 "\nWill be further modified by our §YMagic Study Experience Modifier§!.\nMagic Study Experience: [Root.MagicalExperienceModifier]"
  patron_xp_bonus_tt:0 "§MPatron§! has a positive affinity towards this school: §G+25% XP Gain Modifier§!"
  patron_xp_malus_tt:0 "§MPatron§! has a negative affinity towards this school: §R-25% XP Gain Modifier§!"
